--- a/resume1.html
+++ b/resume1.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <header>
+    <header class="kin">
         <h1 class="biod">My Resume</h1>
-        <nav class="new">
+        <div class="pin">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume1.html">Resume</a></li>
                 <li><a href="bio1.html">Bio-data</a></li>
             </ul>
-        </nav>
+          </div>
     </header>
   <div class="container">
     <div class="profile">
