--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Welcome to My Professional Page</h1>
-        <div>
+        <div class="pin">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume1.html">Resume</a></li>
