--- a/resume1.html
+++ b/resume1.html
@@ -15,7 +15,7 @@
         <h1 class="biod">My Resume</h1>
         <div class="pin">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index1.html">Home</a></li>
                 <li><a href="resume1.html">Resume</a></li>
                 <li><a href="bio1.html">Bio-data</a></li>
             </ul>
