--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
         <h1>Welcome to My Professional Page</h1>
         <div class="pin">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index1.html">Home</a></li>
                 <li><a href="resume1.html">Resume</a></li>
                 <li><a href="bio1.html">Bio-data</a></li>
             </ul>
